@@ -1,6 +1,7 @@
-Julien Dutheil <jdutheil@daimi.edu.dk>
-Vincent Ranwez <ranwez@isem.univ-montp2.fr>
-Nicolas Galtier <galtier@univ-montp2.fr>
-Bastien Boussau <bboussau@biomserv.univ-lyon1.fr>
+Julien Dutheil     <julien.dutheil@univ-montp2.fr>
+Vincent Ranwez     <ranwez@univ-montp2.fr>
+Nicolas Galtier    <galtier@univ-montp2.fr>
+Bastien Boussau    <boussau@biomserv.univ-lyon1.fr>
 Céline Scornavacca <celine.scornavacca@lirmm.fr>
-
+Laurent Guéguen    <gueguen@biomserv.univ-lyon1.fr>
+Nicolas Rochette   <rochette@biomserv.univ-lyon1.fr>
